--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
         <h3>My Fourth Website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet enim atque libero suscipit consequuntur natus facere, commodi cum earum. Provident delectus praesentium aliquam dolorum ullam nostrum excepturi optio laborum repellendus!</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m "Commit Message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
+    <div>
+        <h3>Kim khai everyday one single dim</h3>
+        <img src="images/kim.jpg" alt="">
+    </div>
 </body>
 </html>
